# qtngtest

test_sslserver/: main.cpp  sslhelper.cpp  sslhelper.h  test_sslserver.pro
test_sslserver/certificate/: server.cert
test_sslserver/privatekey/: server_private.key
test_sslserver/server/: server.cpp  server.h
test_ssltest/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sslhelper.cpp  sslhelper.h  test_sslclient.pro
test_ssltest/certificate/: client.cert
test_ssltest/privatekey/: client_private.key
test_ssltest/server/: server.cpp  server.h
